Add "Sort by Date" Option

--- a/TaskCalendar/app/src/main/AndroidManifest.xml
+++ b/TaskCalendar/app/src/main/AndroidManifest.xml
@@ -23,15 +23,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity
-            android:name=".NewEventActivity"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-        </activity>
-        <activity
-            android:name=".EditTaskActivity"
+        <activity android:name=".EditTaskActivity"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
